--- a/layout.css
+++ b/layout.css
@@ -340,6 +340,9 @@ body {
     margin: 20px;
     font-size: 30px;
     overflow-y: hidden;
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
 }
 
 .hour-overview-song {
