If a song stops, show the next one
Only in the Top 2000, of course.

This hides the progress bar as soon as a song is finished, and shows it
again when it actually knows the new song is playing.

I think this is really fancy :D

--- a/layout.css
+++ b/layout.css
@@ -182,6 +182,7 @@ body {
     height: 7px;
     margin-top: 12px;
     background-color: #454E59;
+    transition: opacity .4s;
 }
 
 #progress-bar-fill {
