--- a/layout.css
+++ b/layout.css
@@ -523,3 +523,30 @@ body {
     font-size: 15px;
     line-height: 30px;
 }
+
+/* clock */
+
+#clock {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #B2DBD6;
+    opacity: 0;
+    transition: opacity 1s;
+    text-align: center;
+}
+
+#clock.visible {
+    opacity: 1;
+}
+
+#clock #clock-image {
+    width: 80%;
+}
+
+#clock #clock-timer {
+    color: #454E59;
+    font-size: 60px;
+}
