--- a/layout.css
+++ b/layout.css
@@ -426,7 +426,7 @@ body {
     font-weight: 700;
 }
 
-#hour-overview-title .non-bold {
+.hour-overview-title .non-bold {
     font-weight: 400;
 }
 
