--- a/layout.css
+++ b/layout.css
@@ -572,6 +572,16 @@ body {
     font-weight: 400;
 }
 
+.hour-overview-title .vote-badge {
+    border-radius: 23px;
+    margin-left: 15px;
+    width: 20px;
+    height: 23px;
+    top: -4px;
+    padding: 2px 14px;
+    font-size: 20px;
+}
+
 /* clock */
 
 #clock {
